assets/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

/*---------HTML: style overlay-------------*/
html {
   overflow-x: overlay;
   overflow-y: overlay;
}

/*------ Map and general style--------*/
.map-canvas {
   background: none;
}

#map {
   height: 85vh;
   width: 100%;
}

p {
   font-family: "Playfair Dispay", sans-serif;
   margin: 0;
}

.no-padding {
   padding: 0;
}

/*------ Header --------*/
.header {
   position: relative;
   background-color: #733049;
   max-width: 100vw;
}

.header-title {
   font-family: "Playfair Display", sans-serif;
   color: #fff;
   font-style: italic;
   font-weight: 500;
   font-size: 4vh;
}

/*------ Route form side panel--------*/
.route-form {
   border: #a7291d solid;
   padding-top: 1rem;
   background: #fff;
}

.page-info p {
   font-family: "Playfair Display", sans-serif;
   font-size: 0.85rem;
   padding-left: 0.5rem;
   padding-bottom: 0.5rem;
}

#browserInfo {
   padding-left: 0.5rem;
}

/*-------- Transport tabs/links-----*/

.nav-tabs {
   border: none;
}
.nav-position {
   width: auto;
}

.mode-tab {
   background-color: #d4d4d2;
   display: block;
   padding: 0.75rem 1.75rem;
   width: 25vw;
}

.mode-tab i.fas {
   font-size: 1.5rem;
   color: #a7291d;
}

.mode-tab i.fas:hover {
   color: #7f1f16;
}

.mode-tab.active {
   background-color: #a7291d;
   color: #fffffa;
}

.mode-tab.active i.fas {
   color: #fffffa;
}

/*---------Location/date time inputs----------*/
.inputs {
   margin-left: 0.1rem;
}

.deleteButton {
   border: none;
   padding: 0.5rem;
   background: none;
}

/*---------Waypoint addition button----------*/

.waypoint-button {
   color: #000;
   margin: 0.5rem 0.25rem;
   font-family: "Playfair Display";
   text-transform: capitalize;
   border: 0;
   max-width: 15rem;
   background: none;
   text-align: justify;
}

.waypoint-button i {
   height: 1rem;
   width: 1rem;
   font-size: 1rem;
   color: #733049;
}

/*-------- Buttons and button container-----------*/
.button-container {
   background: #d95e52;
}

.button {
   display: inline-block;
   height: 3rem;
   font-weight: 500;
   border: 1px solid transparent;
   color: #fffffa;
   text-align: center;
   vertical-align: middle;
   user-select: none;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
}

.route-btn {
   background-color: #a7291d;
   font-family: "Playfair Display", sans-serif;
   text-transform: uppercase;
   font-weight: 600;
}

.route-btn:hover {
   background-color: #6b1b13;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.reset-btn {
   background-color: #733049;
   font-family: "Playfair Display", sans-serif;
   text-transform: uppercase;
   font-weight: 600;
}

.reset-btn:hover {
   background-color: #481b2c;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.close-btn {
   background-color: #808080;
   text-transform: uppercase;
   border-radius: 5%;
}

.close-btn:hover {
   background-color: #696969;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.send-btn {
   background-color: #555454;
   text-transform: uppercase;
   border-radius: 5%;
}

.send-btn:hover {
   background-color: #3a3a3a;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

/*---------- Footer and social links------------*/
.footer {
   background: #d4d4d2;
}

.footer-padding {
   padding: 0.5rem;
}

.footer-padding div a {
   color: black;
}

.copyright {
   margin-bottom: 0.5rem;
   font-size: smaller;
}

.social-links {
   display: flex;
   list-style-type: none;
   margin: 0;
}

.social-links {
   padding: 0 0.25rem;
   font-size: 1.25rem;
}

/*---------Contacts Us/ Modal styling-------*/
.modal-custom {
   font-family: "Playfair Display", sans-serif;
   border: 2px solid #733049;
}

.modal-header-custom {
   background-color: #733049;
   color: #fffffa;
}

.modal-body-custom {
   padding: 0;
   padding-top: 1rem;
}

.modal-body-custom p {
   padding: 1.5rem;
   font-size: large;
   font-family: "Playfair Display";
   text-align: center;
}

.modal-body-custom .form-group {
   padding: 0 1rem;
   margin-bottom: 1rem;
}

.modal-footer-custom {
   background-color: #afafaf;
   color: #fffffa;
}

/*----------------Media Queries-----------*/

/*For tablets and small laptops*/
@media (min-width: 768px) {
   body {
      height: 100vh;
   }

   /*Moves the search form from the top of the screen to the left*/
   .map-canvas {
      position: absolute;
      z-index: 999;
      width: 22rem;
      top: 15%;
      left: 1%;
      background: none;
      padding-top: 1rem;
      padding-bottom: 1rem;
   }
   .header {
      height: 7vh;
   }

   #map {
      height: 93vh;
   }

   .mode-tab {
      display: block;
      padding: 0.5rem 1rem;
      border-top-left-radius: 10%;
      border-top-right-radius: 10%;
      margin: 0 0.25rem;
      width: 3.5rem;
   }

   .route-form {
      border-top-right-radius: 8%;
   }

   .button-container {
      border-bottom-right-radius: 10%;
   }

   .reset-btn {
      border-bottom-right-radius: 10%;
   }

   .route-btn {
      border-bottom-left-radius: 8%;
   }

   /*Changes the footer from entire block to a small sections across the bottom of the page*/
   .footer {
      position: absolute;
      z-index: 999;
      bottom: 1.2%;
      left: 50%;
      transform: translate(-50%, 0);
      width: 35rem;
      font-size: 12px;
      color: #000;
      height: 20px;
   }

   .footer-padding {
      padding: 0;
   }

   .social-links li {
      padding: 0 0.25rem;
      color: #733049;
      font-size: 1.25rem;
      margin-top: -0.4rem;
   }
}

/*For laptops and above*/
@media (min-width: 992px) {
   .map-canvas {
      position: absolute;
      z-index: 999;
      width: 32rem;
      top: 15%;
      left: 1%;
      background: none;
      padding-top: 1rem;
      padding-bottom: 1rem;
   }

   .nav-position {
      margin-right: -20px;
   }

   .header {
      height: 6vh;
   }

   #map {
      height: 94vh;
   }

   .footer {
      position: absolute;
      z-index: 999;
      bottom: 1.5%;
      left: 50%;
      transform: translate(-50%, 0);
      width: 35rem;
      font-size: 12px;
      color: #000;
      height: 20px;
   }
}

